@@ -22,6 +22,7 @@
 * Show name of pre-defined searches in tab.
 * Tab: jump to next unread thread.
 * X: Force close tab.
+* C-s: Cycle through sorting the thread_index (default configurable)
 
 == v0.4 / 2015-08-15
 
